# hlwmcp

./: README.md  pyproject.toml
src/     my_server/: __init__.py
